--- a/src/Components/Splash/Splash.css
+++ b/src/Components/Splash/Splash.css
@@ -15,12 +15,13 @@
   justify-content: center;
   align-items: center;
   background: center / contain no-repeat url("/src/Assets/Button.png");
-  height: 5vh;
+  height: 8vh;
   width: 12vw;
-  font-size: 2vw;
+  font-size: 1.5vw;
   font-weight: 600;
-  text-shadow: -0.02rem 0.02rem 0 #ff00a7, 0.02rem 0.02rem 0 #ff00a7,
-    0.02rem -0.02rem 0 #ff00a7, -0.02rem -0.02rem 0 #ff00a7;
+  text-shadow: -0.01rem 0.01rem 0 #ff00a7, 0.01rem 0.01rem 0 #ff00a7,
+    0.01rem -0.01rem 0 #ff00a7, -0.01rem -0.01rem 0 #ff00a7;
   color: white;
   text-decoration: none;
+  margin: 1%;
 }
