--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,3 +1,17 @@
 .question {
-  height: 79vh;
+  height: 20%;
+  width: 8%;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search {
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
