--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .navBar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   background-image: url("/src/Assets/NavBar.png");
   background-size: 98% 100%;
@@ -15,12 +15,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2vw;
+  font-size: 1.5vw;
   padding: 0.5%;
   background: center no-repeat url("/src/Assets/Button.png");
   background-size: 100% 100%;
-  height: 11vh;
-  width: 25vw;
+  height: 8vh;
+  width: 20vw;
   font-size: 1.5vw;
   font-weight: 600;
   text-shadow: -0.01rem 0.01rem 0 #ff00a7, 0.01rem 0.01rem 0 #ff00a7,
