--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,6 +1,7 @@
 .home {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   height: auto;
   margin: 1%;
