--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -42,3 +42,20 @@
 .filterButton:hover {
   cursor: pointer;
 }
+
+@media screen and (min-width: 280px) and (max-width: 930px) {
+  .filterLabel,
+  .filterSelect {
+    font-size: 6vw;
+  }
+
+  .filterButton {
+    height: 30vh;
+    width: 50vw;
+    font-size: 5vw;
+    font-weight: 600;
+    text-shadow: -0.075rem 0.075rem 0 #ff00a7, 0.075rem 0.075rem 0 #ff00a7,
+      0.075rem -0.075rem 0 #ff00a7, -0.075rem -0.075rem 0 #ff00a7;
+    margin: 0;
+  }
+}
