--- a/src/Components/Drink/Drink.css
+++ b/src/Components/Drink/Drink.css
@@ -25,3 +25,12 @@
   box-shadow: 0 0 0.125rem #ffff, 0 0 0.75rem #ff00a6;
   margin: 2%;
 }
+
+@media screen and (min-width: 280px) and (max-width: 930px) {
+  .drinkTitle {
+    font-size: 5vw;
+  }
+  .drinkThumb {
+    width: 100%;
+  }
+}
