--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -56,6 +56,6 @@
     font-weight: 600;
     text-shadow: -0.075rem 0.075rem 0 #ff00a7, 0.075rem 0.075rem 0 #ff00a7,
       0.075rem -0.075rem 0 #ff00a7, -0.075rem -0.075rem 0 #ff00a7;
-    margin: 0;
+    margin: -20%;
   }
 }
