--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -30,6 +30,10 @@
   position: relative;
 }
 
+.currentPage {
+  text-decoration: underline;
+}
+
 @media screen and (min-width: 280px) and (max-width: 300px) {
   .navLink {
     font-size: 45%;
