--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -1,6 +1,6 @@
 .drinkType,
 .instructions {
-  font-size: 1.5vw;
+  font-size: 2vw;
   font-weight: 600;
   text-shadow: -0.01rem 0.01rem 0 #ff00a7, 0.01rem 0.01rem 0 #ff00a7,
     0.01rem -0.01rem 0 #ff00a7, -0.01rem -0.01rem 0 #ff00a7;
@@ -36,4 +36,9 @@
 .instructions {
   width: 50vw;
   margin: 1%;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
 }
